MTP: Fix compilation warning.

https://bugzilla.gnome.org/show_bug.cgi?id=715119